# base_multi_agent

./: .env.example  CLAUDE.md  README.md  app.py  main.py  pyproject.toml
.claude/: settings.local.json
core/: __init__.py  llm.py
nodes/: final_response.py  intent_classifier.py  router.py  unknown_handler.py
nodes/agents/: agent_a.py  agent_b.py  executor.py
prompts/: agent_base.py
prompts/agents/: __init__.py  agent_b_prompt.py
src/workflows/v1_0/: state.py  workflow.py
src/workflows/v1_0/config/: __init__.py  intents.py  settings.py
src/workflows/v1_0/core/: exceptions.py  logging.py
src/workflows/v1_0/mcp/: client.py
src/workflows/v1_0/mcp/tool/: base_tool.py  summary_tool.py
src/workflows/v1_0/node/: default_response.py  final_response.py  intent_classifier.py  unknown_handler.py
src/workflows/v1_0/nodes/: __init__.py  final_response.py  intent_classifier.py
src/workflows/v1_0/prompt/: __init__.py  default_response_prompt.py  final_response_prompt.py
src/workflows/v1_0/rag/: __init__.py  xxx_retriever.py
src/workflows/v1_0/tests/: conftest.py
src/workflows/v1_1/: workflow.py
src/workflows/v1_1/core/: llm.py
src/workflows/v1_1/mcp/: __init__.py
src/workflows/v1_1/node/: default_response.py  final_response.py  intent_classifier.py  router.py
src/workflows/v1_1/nodes/: intent_classifier.py  unknown_handler.py
src/workflows/v1_1/prompts/: intent_classifier_prompt.py  unknown_handler_prompt.py
src/workflows/v1_1/rag/: base_retriever.py  iflow_retriever.py
tests/integration/: test_workflow.py
(+25 files in other folders)
