[project]
name = "multi-agent-base"
version = "0.1.0"
description = "Multi-Agent architecture base project using LangGraph + LangChain for GAIA platform"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=1.0",
    "langchain>=0.3",
    "langchain-openai>=0.3",
    "pymilvus>=2.4",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    "structlog>=24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.14",
]

[tool.pytest.ini_options]
testpaths = ["src/workflows/v1_0/tests"]
pythonpath = ["src/workflows/v1_0", "src"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
